--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "now-build": "npm run build",
     "analyze": "cross-env BUNDLE_ANALYZE=true next build ",
     "dev": "node server.js",
     "env": "node ./bin/env.js",
     "build": "next build ",
-    "storybook": "start-storybook",
     "start": "cross-env NODE_ENV=production npm run build && cross-env NODE_ENV=production node server.js",
-    "lint": "eslint .",
-    "test:unit": "TEST=true jest ./.storybook/storybook.test.js"
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -21,18 +18,12 @@
     "@babel/core": "^7.0.1",
     "@babel/polyfill": "^7.8.3",
     "@babel/register": "^7.0.0",
-    "@next/bundle-analyzer": "9.0.5",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
-    "@zeit/next-source-maps": "0.0.4-canary.1",
     "babel-eslint": "10.0.1",
     "bootstrap": "4.3.1",
-    "cacheable-response": "^1.9.1",
-    "classnames": "2.2.6",
-    "colors": "1.3.3",
+    "cacheable-response": "^2.0.1",
     "cookie": "0.4.0",
-    "cross-env": "5.2.0",
-    "dotenv": "6.2.0",
     "eslint": "6.2.2",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-airbnb-base": "13.1.0",
@@ -42,30 +33,20 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "7.11.1",
     "eslint-watch": "4.0.2",
-    "expect": "24.9.0",
     "express": "^4.17.1",
     "fs-extra": "8.1.0",
     "fusioncharts": "^3.15.0-sr.1",
-    "ionicons": "^4.0.0",
-    "isomorphic-unfetch": "3.0.0",
-    "js-cookie": "2.2.0",
     "lodash": "4.17.15",
     "merge-deep": "^3.0.2",
-    "mocha": "6.2.0",
     "moment": "^2.24.0",
     "next": "9.0.4",
-    "next-offline": "4.0.3",
-    "next-transpile-modules": "^3.0.2",
-    "nightwatch": "^1.2.1",
     "node-sass": "4.12.0",
     "prettier": "1.15.2",
     "prop-types": "15.7.2",
     "raw-loader": "^4.0.0",
     "react": "^16.8.4",
-    "react-device-detect": "^1.9.9",
     "react-dom": "^16.8.4",
     "react-fusioncharts": "^3.1.1",
-    "react-markdown": "^4.2.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "webpack": "4.38.0"
@@ -73,18 +54,6 @@
   "devDependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "enzyme-to-json": "^3.4.3",
-    "jest": "^24.9.0",
-    "jest-css-modules": "^2.1.0",
-    "storybook-addon-smart-knobs": "^5.0.0",
-    "@storybook/addon-actions": "^5.2.3",
-    "@storybook/addon-info": "^5.2.3",
-    "@storybook/addon-knobs": "^5.2.3",
-    "@storybook/addon-options": "^5.0.0",
-    "@storybook/addon-storyshots": "^5.2.5",
-    "@storybook/react": "^5.2.5",
     "nodemon": "^1.19.1"
   }
 }
